# libvmod-policy

./: .gitignore  Makefile.am  README.rst  VPOLServer.py  autogen.sh  configure.ac  policy-example.py  req-client.py  vpol-protocol.txt
src/: Makefile.am  vmod_policy.c  vmod_policy.vcc
src/tests/: test01.vtc
